--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/material": "^5.16.7",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "next": "14.2.5",
     "react": "^18",
